Segunda petición challenge. Unificados los repositorios de GitHub 'rpgmypet
