# internal/handlers/pet.go
@@ -7,7 +7,6 @@ import (
 	"net/http"
 	"rpgmypet/internal/databases"
 	"rpgmypet/internal/models"
-	"strconv"
 	"time"
 
 	"github.com/gorilla/mux"
@@ -15,8 +14,7 @@ import (
 )
 
 const (
-	DEFAULT_PAGE_SIZE = "10"
-	DEFAULT_ORDER_BY  = "name asc"
+	NOT_FOUND_SPECIE = "Specie not found"
 )
 
 type createRequest struct {
@@ -28,27 +26,27 @@ type createRequest struct {
 
 // swagger:response createPetResponse
 type createResponse struct {
-	// in:body
+	// in: body
 	Pet models.Pet `json:"pet"`
 }
 
 // swagger:response listPetResponse
 // description: DTO para contestar a la petición de 'ListPetRequest'
 type listResponse struct {
-	// in:body
-	PageInfo *models.Pagination `json:"pageInfo"`
-	Pets     []*models.Pet      `json:"pets"`
+	// in: body
+	Pets []*models.Pet `json:"pets"`
 }
 
 // swagger:response reportPetResponse
 type reportResponse struct {
-	// in:body
+	// in: body
 	Specie string `json:"specie"`
 
 	AverageAge        string `json:"averageAge,omitempty"`
 	StandardDeviation string `json:"standardAgeDeviation,omitempty"`
 }
 
+//* Función que será ejecutada en el 'endpoint' -> POST '/creamascota'
 func CreatePet() http.HandlerFunc {
 	return func(writer http.ResponseWriter, request *http.Request) {
 		var decodedRequest = new(createRequest)
@@ -56,30 +54,6 @@ func CreatePet() http.HandlerFunc {
 			http.Error(writer, err.Error(), http.StatusBadRequest)
 			return
 		}
-
-		if decodedRequest.Name == "" {
-			http.Error(writer, "name field is required", http.StatusBadRequest)
-			return
-		}
-		if decodedRequest.Specie == "" {
-			http.Error(writer, "specie field is required", http.StatusBadRequest)
-			return
-		}
-		if decodedRequest.Sex == "" {
-			http.Error(writer, "sex field is required", http.StatusBadRequest)
-			return
-		}
-		/** Para controlar que el campo 'Birthdate' no esté vacío, o contenga su 'zerovalue', es
-		necesario implementar la interfaz 'unmarshall' de 'json' dentro de un struct personalizado;
-		ergo daremos por supuesto que siempre será facilitado para mantener el ejercicio sencillo,
-		ya que el control de errores no ha sido contemplado y/o requerido en el ejercicio propuesto.
-		*/
-		/*
-			if decodedRequest.Birthdate.IsZero() {
-				http.Error(writer, "Birthdate field is required", http.StatusBadRequest)
-				return
-			}
-		*/
 
 		newId, err := ksuid.NewRandom()
 		if err != nil {
@@ -107,72 +81,46 @@ func CreatePet() http.HandlerFunc {
 		json.NewEncoder(writer).Encode(notEncodedResponse)
 	}
 }
+
+//* Función que será ejecutada en el 'endpoint' -> GET '/lismascotas'
 func ListPets() http.HandlerFunc {
 	return func(writer http.ResponseWriter, request *http.Request) {
-		pageInfo := &models.Pagination{
-			OrderBy:   DEFAULT_ORDER_BY,
-			PageSize:  DEFAULT_PAGE_SIZE,
-			PageToken: 1,
-		}
-
-		queryParams := mux.Vars(request)
-		if orderBy := queryParams["orderBy"]; orderBy != "" {
-			pageInfo.OrderBy = orderBy
-		}
-		if pageSize := queryParams["pageSize"]; pageSize != "" {
-			pageInfo.PageSize = pageSize
-		}
-		if pageToken := queryParams["pageToken"]; pageToken != "" {
-			pageInfo.PageToken, _ = strconv.Atoi(pageToken)
-		}
-		if totalPages := queryParams["totalPages"]; totalPages != "" {
-			pageInfo.TotalPages = totalPages
-		}
-		if totalItems := queryParams["totalItems"]; totalItems != "" {
-			pageInfo.TotalItems = totalItems
-		}
-
-		pageInfo, pets, err := databases.ListPets(request.Context(), pageInfo)
+		pets, err := databases.ListPets(request.Context(), "")
 		if err != nil {
 			http.Error(writer, err.Error(), http.StatusInternalServerError)
 			return
 		}
 
 		notEncodedResponse := listResponse{
-			PageInfo: pageInfo,
-			Pets:     pets,
+			Pets: pets,
 		}
 		writer.Header().Set("Content-Type", "application/json")
 		json.NewEncoder(writer).Encode(notEncodedResponse)
 	}
 }
+
+//* Función que será ejecutada en el 'endpoint' -> GET '/kpidemascotas'
 func ReportPets() http.HandlerFunc {
 	return func(writer http.ResponseWriter, request *http.Request) {
 		queryParams := mux.Vars(request)
-		if specie := queryParams["specie"]; specie != "" {
-			pageInfo := &models.Pagination{
-				OrderBy:        DEFAULT_ORDER_BY,
-				PageSize:       "ALL",
-				FilterBySpecie: specie,
-			}
+		if filterBySpecie := queryParams["specie"]; filterBySpecie != "" {
 
-			_, pets, err := databases.ListPets(request.Context(), pageInfo)
+			pets, err := databases.ListPets(request.Context(), filterBySpecie)
 			if err != nil {
 				http.Error(writer, err.Error(), http.StatusInternalServerError)
+				return
 			}
 
+			if len(pets) == 0 {
+				http.Error(writer, NOT_FOUND_SPECIE, http.StatusNotFound)
+				return
+			}
+
+			avgAge, stDev := getAVGAgeAndSTDeviation(pets)
 			notEncodedResponse := reportResponse{
-				Specie:            "specie not found",
-				AverageAge:        "",
-				StandardDeviation: "",
-			}
-
-			if len(pets) != 0 {
-				avgAge, stDev := getAVGAgeAndSTDeviation(pets)
-
-				notEncodedResponse.Specie = pageInfo.FilterBySpecie
-				notEncodedResponse.AverageAge = fmt.Sprintf("%f days", avgAge)
-				notEncodedResponse.StandardDeviation = fmt.Sprintf("%f days", stDev)
+				Specie:            filterBySpecie,
+				AverageAge:        fmt.Sprintf("%f days", avgAge),
+				StandardDeviation: fmt.Sprintf("%f days", stDev),
 			}
 
 			writer.Header().Set("Content-Type", "application/json")
@@ -193,6 +141,9 @@ func ReportPets() http.HandlerFunc {
 	}
 }
 
+/** Función, de ámbito privado, que realiza los cálculos requeridos en el challenge sobre las edades
+*   de las entidades 'Pet' del sistema.
+ */
 func getAVGAgeAndSTDeviation(items []*models.Pet) (float64, float64) {
 	var sumAges float64
 	for _, item := range items {
