# internal/models/pagination.go
@@ -1,11 +1,0 @@
-package models
-
-type Pagination struct {
-	OrderBy        string `json:"orderBy"`
-	FilterBySpecie string `json:"specie,omitempty"`
-
-	PageSize   string `json:"pageSize"`
-	PageToken  int    `json:"pageToken"`
-	TotalPages string `json:"totalPages"`
-	TotalItems string `json:"totalItems"`
-}
